Cette section présente la création des tables Technicien, Signalement et Appel.

--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,3 +1,3 @@
-db.url=jdbc:mysql://localhost:3307/plateforme_signalement_suivi?serverTimezone=UTC
+db.url=jdbc:mysql://localhost:3306/plateforme_signalement_suivi?serverTimezone=UTC
 db.user=root
-db.password=taki2004
+db.password=
